# tokimo-app-bangumi-calendar

./: Cargo.toml  README.md  lefthook.yml  rustfmt.toml  tokimo-app.toml
src/: app_server.rs  cli.rs  main.rs
src/client-api/: bangumi.rs
src/client-api/metadata_providers/: bangumi.rs
src/db/entities/: bangumi_settings.rs
src/handlers/: bangumi.rs
src/router/: bangumi.rs
src/server/lib/: bangumi-client.ts
src/server/modules/bangumi-calendar/: bangumi-calendar.router.ts  bangumi-calendar.service.ts  index.ts
src/services/: bangumi.rs
ui/: package.json
ui/src/: TranslatorContext.tsx  index.tsx  types.ts
ui/src/i18n/: index.ts
ui/src/pages/: BangumiAnimeCard.tsx  index.tsx
ui/src/settings/: DashboardBangumiPage.tsx
ui/src/types/: bangumi-calendar.ts
