[package]
name        = "tokimo-app-bangumi-calendar"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo Bangumi Calendar app: daily broadcast schedule and trending subjects."
repository  = "https://github.com/tokimo-lab/tokimo-app-bangumi-calendar"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

clap               = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
axum               = { version = "0.8", features = ["json"] }
